--- a/src/components/Canvas/Navigator/styles.module.scss
+++ b/src/components/Canvas/Navigator/styles.module.scss
@@ -202,7 +202,7 @@
   align-items: center;
   gap: 4px;
   height: 22px;
-  line-height: 1;
+  line-height: 1.3;
   padding: 0 8px;
   cursor: pointer;
   border-radius: 5px;
@@ -269,7 +269,7 @@
   height: 22px;
   padding: 0 8px;
   cursor: pointer;
-  line-height: 1;
+  line-height: 1.3;
   border-radius: 5px;
   color: var(--text-1);
   font-size: 13px;
